--- a/styles.css
+++ b/styles.css
@@ -29,3 +29,20 @@ header {
 	background-size: cover
 }
 
+.header-content-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.img-container img {
+	max-width: 100%;
+}
+
+button {
+	border-radius: 500px;
+}
+
+@media only screen and (min-width: 375px;) {
+	
+}
