--- a/styles.css
+++ b/styles.css
@@ -7,20 +7,29 @@
 body {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 18px;
+	color: #01252e;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
 	font-family: 'Poppins', sans-serif;
 	font-weight: 600;
 }
 
-header, main, footer {
-	padding: 30px 15px;
+header,
+main,
+footer {
+	padding: 50px 45px;
 }
 
 .top-bar {
 	display: flex;
 	justify-content: space-between;
+	margin-bottom: 50px;
 }
 
 header {
@@ -35,14 +44,99 @@ header {
 	align-items: center;
 }
 
+.header-text {
+	text-align: center;
+	max-width: 675px;
+}
+
+.header-text h1 {
+	font-size: 3em;
+}
+
+.header-text p {
+	font-size: 2em;
+	padding: 50px;
+}
+
+.header-text .button-pink {
+	margin: 50px;
+}
+
 .img-container img {
-	max-width: 100%;
+	display: block;
+	max-width: 80%;
+	margin: 0 auto;
 }
 
 button {
 	border-radius: 500px;
+	border: none;
+	box-shadow: 0 0 10px 0 lightgrey;
+	background-color: white;
+	font-size: 1.3em;
+	font-weight: bold;
+	padding: 10px 40px;
 }
 
-@media only screen and (min-width: 375px;) {
-	
+.button-pink {
+	background-color: hsl(322, 100%, 66%);
+	color: white;
 }
+
+.button:hover, .button:active {
+	background-color: hsl(322, 80%, 50%);
+	color: white;
+}
+
+.button:active {
+	background-color: hsl(322, 60%, 50%);
+}
+
+.card {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	box-shadow: 0 0 10px 0 lightgrey;
+	border-radius: 50px;
+	padding: 70px;
+	margin-top: 100px;
+	margin-bottom: 100px;
+	background-color: white;
+}
+
+.card .img-container .img {
+	max-height: 350px;
+}
+
+.card .text-container {
+	text-align: center;
+}
+
+.card .text-container h3 {
+	margin: 40px 0;
+	font-size: 2em;
+}
+
+.card .text-container p {
+	color: gray;
+	margin: 40px 0;
+	font-size: 1.8em
+}
+
+footer {
+	background-color: hsl(192, 100%, 9%);
+	color: white;
+	position: relative;
+}
+
+.footer-flex {
+	display: flex;
+}
+
+.floating {
+	position: absolute;
+	top: -120px;
+	margin: 0 auto;
+}
+
+@media only screen and (min-width: 375px;) {}
