--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@ button {
 }
 
 main {
-	padding-bottom: 200px;
+	margin-bottom: -220px;
 }
 
 .card {
@@ -102,8 +102,9 @@ main {
 	flex-direction: column;
 	align-items: center;
 	box-shadow: 0 0 10px 0 lightgrey;
-	border-radius: 50px;
+	border-radius: 30px;
 	padding: 70px;
+	margin: 0 auto;
 	margin-top: 100px;
 	margin-bottom: 100px;
 	background-color: white;
@@ -117,7 +118,7 @@ main {
 	text-align: center;
 }
 
-.card .text-container h3 {
+.card .text-container h3, #ready-build {
 	margin: 40px 0;
 	font-size: 2em;
 }
@@ -131,9 +132,8 @@ main {
 footer {
 	background-color: hsl(192, 100%, 9%);
 	color: white;
-	position: relative;
-	padding-top: 160px;
-	padding-bottom: 10px;`
+	padding-bottom: 10px;
+	padding-top: 200px;
 }
 
 .footer-flex {
@@ -150,15 +150,15 @@ footer {
 }
 
 .floating-wrapper {
-	position: absolute;
-	width: 460px;
-	margin: 0 calc(50vw - 270px);
-	top: -120px;
+	position: relative;
+	top: 70px;
+	max-width: 760px;
+	margin: 0 auto;
 }
 
-.floating {
-	margin: 0 auto;
-/*	width: 600px;*/
+#ready-build {
+	margin-bottom: 25px;
+	text-align-last: center;
 }
 
 ul li {
@@ -173,7 +173,6 @@ ul li {
 .footer-contact li img {
 	flex-shrink: 0;
 	flex-basis: 1.8em;
-	;
 	margin-right: 30px;
 }
 
@@ -183,8 +182,19 @@ ul li {
 	align-items: center;
 }
 
-/*
+
 @media only screen and (min-width: 375px) {
+	
+	.content-card {
+		flex-direction: row;
+		max-width: 960px;
+	}
+	
+	.content-card:nth-of-type(2) {
+		flex-direction: row-reverse;
+	}
+	
+	
 	.footer-flex {
 		flex-direction: row;
 	}
@@ -201,7 +211,7 @@ ul li {
 	}
 	
 	.footer-nav-container li {
-		height: 33%;
+/*		height: 33%;*/
 	}
 	
 	.footer-social-copyright {
@@ -211,4 +221,4 @@ ul li {
 	.footer-flex div {
 		
 	}
-}*/
+}
