--- a/styles.css
+++ b/styles.css
@@ -20,22 +20,28 @@ h6 {
 	font-weight: 600;
 }
 
+img {
+	max-width: 100%;
+	height: auto; 
+}
+
 header,
 main,
 footer {
 	padding: 50px 30px;
 }
 
-.top-bar {
-	display: flex;
-	justify-content: space-between;
-	margin-bottom: 50px;
-}
 
 header {
 	background-image: url(images/bg-hero-mobile.svg);
 	background-repeat: no-repeat;
 	background-size: cover
+}
+
+.top-bar {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 50px;
 }
 
 .header-content-container {
@@ -56,16 +62,11 @@ header {
 .header-text p {
 	font-size: 2em;
 	padding: 50px;
+	padding-bottom: 0;
 }
 
 .header-text .button-pink {
 	margin: 50px;
-}
-
-.img-container img {
-	display: block;
-		max-width: 80%;
-	margin: 0 auto;
 }
 
 button {
@@ -110,8 +111,14 @@ main {
 	background-color: white;
 }
 
-.card .img-container .img {
-	max-height: 350px;
+.card .img-container {
+	min-width: 500px;
+}
+
+.img-container img {
+	display: block;
+	max-width: 100%;
+	margin: 0 auto;
 }
 
 .card .text-container {
@@ -183,7 +190,9 @@ ul li {
 }
 
 
-@media only screen and (min-width: 375px) {
+/*
+
+@media only screen and (min-width: 800px) {
 	
 	.content-card {
 		flex-direction: row;
@@ -211,7 +220,7 @@ ul li {
 	}
 	
 	.footer-nav-container li {
-/*		height: 33%;*/
+		height: 33%;
 	}
 	
 	.footer-social-copyright {
@@ -222,3 +231,4 @@ ul li {
 		
 	}
 }
+*/
