--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ footer {
 }
 
 .footer-nav li {
-	margin: 15px 0
+	margin: 25px 0
 }
 
 .floating-wrapper {
@@ -165,7 +165,7 @@ footer {
 
 #ready-build {
 	margin-bottom: 25px;
-	text-align-last: center;
+	text-align: center;
 }
 
 ul li {
@@ -174,7 +174,7 @@ ul li {
 
 .footer-contact li {
 	display: flex;
-	margin: 15px 0;
+	margin: 25px 0;
 }
 
 .footer-contact li img {
@@ -189,8 +189,17 @@ ul li {
 	align-items: center;
 }
 
+.footer-social-icons {
+	margin: 25px auto;
+}
 
-/*
+.footer-social-icons i {
+	width: 50px;
+	height: 50px;
+	border: 1px solid white;
+	border-radius: 50%
+}
+
 
 @media only screen and (min-width: 800px) {
 	
@@ -217,6 +226,7 @@ ul li {
 		display: flex;
 		flex-flow: column wrap;
 		align-content: stretch;
+		padding: auto 100px;
 	}
 	
 	.footer-nav-container li {
@@ -231,4 +241,3 @@ ul li {
 		
 	}
 }
-*/
